updated MyPet for Minecraft 1.6.1